# Booking_cafe_seats

./: README.md
.github/workflows/: cicd.yml
infra/: .env.example  DEPLOY.md  docker-compose.production.yml  docker-compose.yml  nginx.yamdb.conf
src/: Dockerfile.app  Dockerfile.celery  poetry.toml  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 4b5120e617e7_initial_schema.py  5daf9214ee91_remove_redundant_uploaded_at_field_from_.py  985131bcbfe7_create_cafe.py  abc123456789_replace_image_data_with_file_path.py  c9bb82321de7_add_description_to_slot.py  deefea5c0c3a_add_media_table.py
src/app/: main.py
src/app/api/endpoints/: __init__.py  action.py  auth.py  booking.py  cafe.py  dish.py  healthcheck.py  media.py  slot.py  table.py  user.py
src/app/core/: auth.py  base.py  config.py  constants.py  db.py  dependencies.py  exception_handler.py  init_admin.py  logging.py  notification.py
src/app/middleware/: http_logging.py
src/app/models/: __init__.py  action.py  associations.py  booking.py  cafe.py  dish.py  media.py  reservation_unit.py  slot.py  table.py  user.py
src/app/repositories/: __init__.py  action.py  base.py  booking.py  cafe.py  dish.py  slot.py  table.py  user.py
src/app/schemas/: __init__.py  action.py  auth.py  booking.py  cafe.py  common.py  dish.py  media.py  slot.py  table.py  user.py
src/app/services/: availability_service.py  cache_service.py  notification.py  send_email_service.py
src/app/utils/: enums.py  http.py  logging_decorator.py  validators.py
src/celery_app/: main.py  tasks.py
